[package]
name = "yaml-rust-next"
version = "0.4.5" # remember to update html_root_url
authors = ["Edward George <edwardgeorge@gmail.com>", "Yuheng Chen <yuhengchen@sensetime.com>"]
homepage = "https://github.com/edwardgeorge/yaml-rust"
documentation = "https://docs.rs/yaml-rust"
license = "MIT/Apache-2.0"
description = "The missing YAML 1.2 parser for rust"
repository = "https://github.com/edwardgeorge/yaml-rust"
readme = "README.md"
edition = "2018"

[dependencies]
linked-hash-map = "0.5.3"

[dev-dependencies]
quickcheck = "0.9"
